# thermocomputing

./: .gitignore  CODE_PLAN.md  COMPARISON_EP.md  CRITIQUE.md  GEMINI_COMPARISON.md  GEMINI_INSIGHTS.md  HARDWARE_COMPARISON.md  NOTES.md  PLAN.md  README.md  STUDY_NOTES.md  contrastive_training.py  criticality_torch.py  denoise_with_learned_biases.py  learn_couplings.py  learn_couplings_score.py  make_architecture_diagram.py  make_circuit_diagram.py  make_node_diagram.py  make_trajectory_figure.py  mnist_conditional.py  mnist_criticality.py  mnist_rbm.py  mnist_thermodynamic.py  morisse-whitelam-twocol.tex  morisse-whitelam.tex  parameter_recovery.py  pyproject.toml  pytorch_comparison.py  test_classification.py  trajectory_action.py  trajectory_estimator.py  utils.py  verify.py  verify_convergence.py  verify_multi.py  verify_simple.py  visualize_attractors.py
archive/: mnist_denoise.py  redo_trajectory.py  verify_full.py  visualize_biases.py
