[project]
name = "physics"
version = "0.1.0"
description = "Physics / LaTeX workspace sharing the base-dev environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # === CORE AI & AGENT FRAMEWORKS ===
    "pydantic>=2.11.7",
    "pydantic-ai>=0.8.1",
    "openai>=1.99.9",
    "anthropic>=0.25.0",
    
    # === WEB FRAMEWORKS ===
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.25.0",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    
    # === DATA PROCESSING ===
    "pandas>=2.3.2",
    "numpy>=1.24.0",
    "pyarrow>=21.0.0",
    "duckdb>=1.4.1",
    "scipy>=1.10.0",
    "scikit-learn>=1.7.2",
    "scikit-image>=0.24.0",
    
    # === DATABASE & STORAGE ===
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    
    # === EMBEDDINGS & VECTOR SEARCH ===
    "sentence-transformers>=5.0.0",
    "usearch>=2.19.1",
    "faiss-cpu",
    
    # === GRAPH & VISUALIZATION ===
    "graphistry>=0.42.0",
    "networkx",
    "python-igraph",
    "python-louvain",
    "matplotlib>=3.10.3",
    "plotly>=5.10.0",
    
    # === MCP & INTEGRATION ===
    "mcp>=1.0.0",
    "fastmcp>=2.2.6",
    
    # === WEB SCRAPING & SEARCH ===
    "requests>=2.32.4",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.5.5",
    "duckduckgo-search>=8.1.1",
    "firecrawl>=4.3.6",
    "firecrawl-py>=2.2.0",
    
    # === UTILITIES ===
    "python-dotenv>=1.1.1",
    "aiofiles>=24.1.0",
    "rich>=13.9.4",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.2",
    "backoff==2.2.1",
    "itsdangerous>=2.2.0",
    "gitpython>=3.1.45",
    
    # === FINANCIAL DATA ===
    "yfinance>=0.2.28",
    
    # === ML & AI UTILITIES ===
    "umap-learn>=0.5.9.post2",
    "astor>=0.8.1",
    "cython>=3.1.4",
    
    # === GRADIO & UI ===
    "gradio>=5.32.1",
    
    # === SPECIALIZED ===
    "agno[tools]==1.5.5",
    "openai-harmony>=0.0.4",
    "pgvector>=0.4.0",
    "sqlalchemy-utils>=0.41.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-rerunfailures>=10,<14",
    "pytest-retry>=1.7.0",
    "pytest-sugar>=0.9,<2.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
timeout = 180
